Adding jvm options